# sentryhive

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  scan-example.yml
docs/: architecture.md  authentication.md  ci-cd.md  configuration.md  eks-access.md  faq.md  getting-started.md  iam-permissions.md  index.md  installation.md  reports.md  scanners.md  troubleshooting.md  usage.md
examples/: sample-findings.json  sample-report.html  sample-report.md
examples/configs/: sentryhive.env.example
iam/: audit-role.cfn.yaml  audit-role.tf  eks-access.yaml  eks-readonly-rbac.yaml  least-privilege-policy.json
scripts/: verify-scanners.sh
sentryhive/: __init__.py  aggregate.py  auth.py  cli.py  models.py  normalize.py
sentryhive/report/: __init__.py  generator.py
sentryhive/report/templates/: report.html.j2  report.md.j2
sentryhive/scanners/: __init__.py  ash.py  base.py  cloudsplaining.py  hardeneks.py  prowler.py
tests/: conftest.py  test_aggregate.py  test_auth.py  test_compliance.py  test_eks.py  test_fixtures.py  test_formats.py  test_golden_report.py  test_models.py  test_normalize.py  test_report.py  test_rollup.py  test_scanners.py
tests/fixtures/: ash_sample.json  cloudsplaining_sample.json  hardeneks_sample.json  prowler_sample.json
tests/fixtures/golden/: report.expected.md
