[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentryhive"
version = "0.1.0"
description = "Clone, point it at an AWS account, and get a clean security report from best-in-class open-source scanners."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "SentryHive contributors" }]
keywords = ["aws", "security", "cloud", "prowler", "cloudsplaining", "eks", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "boto3>=1.34",
    "jinja2>=3.1",
]

[project.optional-dependencies]
pdf = [
    # Pure-Python HTML->PDF; needs system libs pango/cairo (bundled in the Docker image).
    "weasyprint>=62",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
sentryhive = "sentryhive.cli:app"

[project.urls]
Homepage = "https://github.com/d2k-klin/sentryhive"
Repository = "https://github.com/d2k-klin/sentryhive"

[tool.hatch.build.targets.wheel]
packages = ["sentryhive"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer requires calling typer.Option/Argument in parameter defaults.
"sentryhive/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
